# stock-recommendations

./: .gitignore  README.md  config.yaml  load_data.ipynb  main.py  multiapp.py  pyproject.toml  stock_analysis.ipynb  web.config
apps/: add_stock.py  fundamentals_update.py  send_email.py  stock_analysis.py  stock_ranking.py  view_portfolio.py
data/: portfolio.xlsx  stock_codes.xlsx  ~$portfolio.xlsx
historical/: 20MICRONS.xlsx  21STCENMGM.xlsx  3IINFOLTD.xlsx  3MINDIA.xlsx  3PLAND.xlsx  4THDIM.xlsx  5PAISA.xlsx  63MOONS.xlsx  A2ZINFRA.xlsx  AAKASH.xlsx  AAREYDRUGS.xlsx  AARON.xlsx  AARTIDRUGS.xlsx  AARTIIND.xlsx  AARTISURF.xlsx  AARVEEDEN.xlsx  AARVI.xlsx  AAVAS.xlsx  ABAN.xlsx  ABB.xlsx  ABBOTINDIA.xlsx  ABCAPITAL.xlsx  ABFRL.xlsx  ABMINTLLTD.xlsx  ABSLAMC.xlsx  ACC.xlsx  ACCELYA.xlsx  ACCURACY.xlsx  ACE.xlsx  ACRYSIL.xlsx  ADANIENT.xlsx  ADANIGREEN.xlsx  ADANIPORTS.xlsx  ADANIPOWER.xlsx  ADANITRANS.xlsx  ADFFOODS.xlsx  ADL.xlsx  ADORWELD.xlsx  ADROITINFO.xlsx  ADSL.xlsx  (+211 more)
temp/: fontlist-v330.json
utils/: assess_scores.py  config.py  custom_logger.py  perf_monitor.py  sell_triggers.py  technical_analysis.py  ticker_data.py  utilities.py
