[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modin = {extras = ["dask"], version = "^0.18.0"}
ipykernel = "^6.20.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
nsetools = "^1.0.11"
reportlab = "^3.6.12"
backtesting = "^0.3.3"
nsepy = "^0.8"
ipympl = "^0.9.2"
mplfinance = "^0.12.9b7"
openpyxl = "^3.1.0"
holidays = "^0.19"
scienceplots = "^2.0.1"
yfinance = "^0.2.9"
dask = {extras = ["dataframe"], version = "^2023.1.1"}
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
