[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.20.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
nsetools = "^1.0.11"
backtesting = "^0.3.3"
nsepy = "^0.8"
openpyxl = "^3.1.0"
bokeh = "2.4.3"
streamlit = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
